--- a/templates/base.html
+++ b/templates/base.html
@@ -122,100 +122,111 @@
             <i class="fa fa-align-left"></i>
         </a>
 
-        <a href="#" class="profile">
-            <span class="username">Terrence</span>
-            <img id="j_idt15" src="{% static 'resource/images/pp.png' %}" alt="..."/>
-            <i class="fa fa-angle-down"></i>
-        </a>
+        {% if user.is_authenticated %}
+            <a href="#" class="profile">
+                <span class="username">{{ user.first_name }}</span>
+                <img id="j_idt15" src="{% static 'resource/images/pp.png' %}" alt="..."/>
+                <i class="fa fa-angle-down"></i>
+            </a>
 
-        <span class="topbar-search">
+            <span class="topbar-search">
             <input type="text" placeholder="Search..."/>
             <span class="fa fa-search"></span>
         </span>
 
-        <ul class="topbar-menu fadeInDown">
-            <li>
-                <a href="#">
-                    <i class="topbar-icon fa fa-fw fa-user"></i>
-                    <span class="topbar-item-name">Profile</span>
-                </a>
-                <ul>
-                    <li role="menuitem">
-                        <a href="#">
-                            <i class="fa fa-fw fa-cog"></i>
-                            <span>Settings</span>
-                        </a>
-                    </li>
-                    <li role="menuitem">
-                        <a href="#">
-                            <i class="fa fa-fw fa-sign-out"></i>
-                            <span>Logout</span>
-                        </a>
-                    </li>
-                </ul>
-            </li>
-            <li>
-                <a href="#">
-                    <i class="topbar-icon fa fa-fw fa-cog"></i>
-                    <span class="topbar-item-name">Settings</span>
-                </a>
-                <ul>
-                    <li role="menuitem">
-                        <a href="#">
-                            <i class="fa fa-fw fa-star-o"></i>
-                            <span>Favorites</span>
-                        </a>
-                    </li>
-                </ul>
-            </li>
-            <li>
-                <a href="#">
-                    <i class="topbar-icon fa fa-fw fa-envelope-o"></i>
-                    <span class="topbar-item-name">Messages</span>
-                    <span class="topbar-badge">5</span>
-                </a>
-            </li>
-            {# for mobile view #}
-            <li class="topbar-search-item">
+            <ul class="topbar-menu fadeInDown">
+                <li>
+                    <a href="#">
+                        <i class="topbar-icon fa fa-fw fa-user"></i>
+                        <span class="topbar-item-name">Profile</span>
+                    </a>
+                    <ul>
+                        <li role="menuitem">
+                            <a href="#">
+                                <i class="fa fa-fw fa-cog"></i>
+                                <span>Settings</span>
+                            </a>
+                        </li>
+                        <li role="menuitem">
+                            <a href="{% url 'logout' %}">
+                                <i class="fa fa-fw fa-sign-out"></i>
+                                <span>Logout</span>
+                            </a>
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="#">
+                        <i class="topbar-icon fa fa-fw fa-cog"></i>
+                        <span class="topbar-item-name">Settings</span>
+                    </a>
+                    <ul>
+                        <li role="menuitem">
+                            <a href="#">
+                                <i class="fa fa-fw fa-star-o"></i>
+                                <span>Favorites</span>
+                            </a>
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="#">
+                        <i class="topbar-icon fa fa-fw fa-envelope-o"></i>
+                        <span class="topbar-item-name">Messages</span>
+                        <span class="topbar-badge">5</span>
+                    </a>
+                </li>
+                {# for mobile view #}
+                <li class="topbar-search-item">
                 <span class="topbar-search">
                     <input type="text" placeholder="Search..."/>
                     <span class="fa fa-search"></span>
                 </span>
-            </li>
-        </ul>
+                </li>
+            </ul>
+
+        {% else %}
+            <a href="#" class="profile">
+                <span class="username">Anonymous User</span>
+                <img id="j_idt15" src="{% static 'resource/images/pp.png' %}" alt="..."/>
+                <i class="fa fa-angle-down"></i>
+            </a>
+
+            <ul class="topbar-menu fadeInDown">
+                <li>
+                    <a href="{% url 'login' %}">
+                        <i class="topbar-icon fa fa-fw fa-sign-in"></i>
+                        <span class="topbar-item-name">Log In</span>
+                    </a>
+                </li>
+            </ul>
+        {% endif %}
+
+
     </div>
 
     <div class="layout-menu-container">
         <div class="nano">
             <div class="nano-content menu-scroll-content">
                 <div class="layout-menu-title">PORTAL</div>
-                    <ul id="menuform:j_idt31" class="layout-menu">
-                        <li id="menuform:apl_dashboard" role="menuitem"><a href="{% url 'manager:portal' %}"><i
-                                class="fa fa-dashboard fa-fw"></i><span>Portal</span></a>
-                            <div class="layout-menu-tooltip">
-                                <div class="layout-menu-tooltip-arrow"></div>
-                                <div class="layout-menu-tooltip-text">Portal</div>
-                            </div>
-                        </li>
-                        <li id="menuform:apl_menus" role="menuitem"><a href="#"><i class="fa fa-bars fa-fw"></i><span>File</span><i
+                <ul id="menuform:j_idt31" class="layout-menu">
+                    <li id="menuform:apl_dashboard" role="menuitem"><a href="{% url 'manager:portal' %}"><i
+                            class="fa fa-dashboard fa-fw"></i><span title="Portal">Portal</span></a>
+                    </li>
+                    {% if user.is_authenticated %}
+                        <li id="menuform:apl_menus" role="menuitem"><a href="#"><i
+                                class="fa fa-bars fa-fw"></i><span title="File">File</span><i
                                 class="layout-menuitem-toggler fa fa-fw fa-angle-down"></i></a>
-                            <div class="layout-menu-tooltip">
-                                <div class="layout-menu-tooltip-arrow"></div>
-                                <div class="layout-menu-tooltip-text">File</div>
-                            </div>
                             <ul role="menu">
                                 <li id="menuform:apl_hmenu" role="menuitem">
-                                    <a href="#" ><i
-                                        class="fa fa-window-restore fa-fw"></i><span>New</span></a>
-                                    <div class="layout-menu-tooltip">
-                                        <div class="layout-menu-tooltip-arrow"></div>
-                                        <div class="layout-menu-tooltip-text">New</div>
-                                    </div>
+                                    <a href="#"><i
+                                            class="fa fa-window-restore fa-fw"></i><span title="New">New</span></a>
                                 </li>
                             </ul>
                         </li>
                         <li id="menuform:apl_dark" role="menuitem"><a href="#"><i class="fa fa-circle fa-fw"></i><span>Processes</span><i
-                                class="layout-menuitem-toggler fa fa-fw fa-angle-down"></i><span class="menuitem-badge">3</span></a>
+                                class="layout-menuitem-toggler fa fa-fw fa-angle-down"></i><span
+                                class="menuitem-badge">3</span></a>
                             <div class="layout-menu-tooltip">
                                 <div class="layout-menu-tooltip-arrow"></div>
                                 <div class="layout-menu-tooltip-text">Processes</div>
@@ -224,10 +235,10 @@
 
                             </ul>
                         </li>
-
                         <li id="menuform:apl_light" role="menuitem"><a href="#"><i
                                 class="fa fa-circle-o fa-fw"></i><span>Finance</span><i
-                                class="layout-menuitem-toggler fa fa-fw fa-angle-down"></i><span class="menuitem-badge">5</span></a>
+                                class="layout-menuitem-toggler fa fa-fw fa-angle-down"></i><span
+                                class="menuitem-badge">5</span></a>
                             <div class="layout-menu-tooltip">
                                 <div class="layout-menu-tooltip-arrow"></div>
                                 <div class="layout-menu-tooltip-text">Finance</div>
@@ -236,8 +247,8 @@
 
                             </ul>
                         </li>
-
-                        <li id="menuform:apl_components" role="menuitem"><a href="#"><i class="fa fa-sitemap fa-fw"></i><span>Facilities</span><i
+                        <li id="menuform:apl_components" role="menuitem"><a href="#"><i
+                                class="fa fa-sitemap fa-fw"></i><span>Facilities</span><i
                                 class="layout-menuitem-toggler fa fa-fw fa-angle-down"></i></a>
                             <div class="layout-menu-tooltip">
                                 <div class="layout-menu-tooltip-arrow"></div>
@@ -260,10 +271,9 @@
                                 </li>
                             </ul>
                         </li>
-
                         <li id="menuform:apl_default" role="menuitem"><a href="#"><i class="fa fa-life-saver fa-fw"></i>
                             <span>CRM</span><i
-                                class="layout-menuitem-toggler fa fa-fw fa-angle-down"></i></a>
+                                    class="layout-menuitem-toggler fa fa-fw fa-angle-down"></i></a>
                             <div class="layout-menu-tooltip">
                                 <div class="layout-menu-tooltip-arrow"></div>
                                 <div class="layout-menu-tooltip-text">CRM</div>
@@ -280,7 +290,7 @@
                         </li>
                         <li id="menuform:apl_hierarchy" role="menuitem"><a href="#"><i class="fa fa-gg fa-fw"></i>
                             <span>Reports</span><i
-                                class="layout-menuitem-toggler fa fa-fw fa-angle-down"></i></a>
+                                    class="layout-menuitem-toggler fa fa-fw fa-angle-down"></i></a>
                             <div class="layout-menu-tooltip">
                                 <div class="layout-menu-tooltip-arrow"></div>
                                 <div class="layout-menu-tooltip-text">Reports</div>
@@ -377,15 +387,16 @@
                                 <div class="layout-menu-tooltip-arrow"></div>
                             </div>
                         </li>
-                        <li id="menuform:apl_buy" role="menuitem"><a href="#"><i
-                                class="fa fa-question fa-fw"></i><span>Help</span></a>
-                            <div class="layout-menu-tooltip">
-                                <div class="layout-menu-tooltip-arrow"></div>
-                            </div>
-                        </li>
-                    </ul>
-                    <script id="menuform:j_idt31_s"
-                            type="text/javascript">PrimeFaces.cw("Apollo", "widget_menuform_j_idt31", {id: "menuform:j_idt31"});</script>
+                    {% endif %}
+                    <li id="menuform:apl_buy" role="menuitem"><a href="#"><i
+                            class="fa fa-question fa-fw"></i><span>Help</span></a>
+                        <div class="layout-menu-tooltip">
+                            <div class="layout-menu-tooltip-arrow"></div>
+                        </div>
+                    </li>
+                </ul>
+                <script id="menuform:j_idt31_s"
+                        type="text/javascript">PrimeFaces.cw("Apollo", "widget_menuform_j_idt31", {id: "menuform:j_idt31"});</script>
 
                 <div class="nano-scroll-footer"></div>
             </div>
@@ -404,15 +415,30 @@
                     <i class="fa fa-cloud-upload"></i>
                 </a><a href="#" title="Bookmark">
                 <i class="fa fa-bookmark"></i>
-            </a><a href="#" title="Logout">
+            </a><a href="{% url 'logout' %}" title="Logout">
                 <i class="fa fa-sign-out"></i>
             </a>
             </div>
         </div>
-
-        {% block content %}
-        {% endblock %}
-
+        <div class="layout-content-container">
+            {% if user.is_authenticated %}
+                {% block content %}
+                {% endblock %}
+            {% else %}
+                <div class="ui-g">
+                    <div class="ui-g-12">
+                        <div class="card">
+                            <h1>No Data</h1>
+                            <p>No Information will be displayed for you because you are not Authenticated. Please Log in
+                                first to enjoy the platform</p>
+                            <a class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only"
+                               style="display:inline-block;margin-top:5px" href="{% url 'login' %}">
+                                <span class="ui-button-text ui-c">Log In</span></a>
+                        </div>
+                    </div>
+                </div>
+            {% endif %}
+        </div>
     </div>
 
     <div class="layout-footer">
