--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,6 @@
 {% load staticfiles %}
 <!DOCTYPE html>
+<!-- @author Terrence Takunda Munyunguma: ttmunyunguma@gmail.com -->
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en">
 <meta http-equiv="content-type" content="text/html;charset=utf-8"/>
 <head id="j_idt2">
@@ -8,10 +9,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"/>
     <meta name="apple-mobile-web-app-capable" content="yes"/>
 
-    <link type="text/css" rel="stylesheet"
-          href="{% static 'resource/css/theme.css' %}"/>
-    <link type="text/css" rel="stylesheet"
-          href="{% static 'resource/css/fa/font-awesome.css' %}"/>
+    <link type="text/css" rel="stylesheet" href="{% static 'resource/css/theme.css' %}"/>
+    <link type="text/css" rel="stylesheet" href="{% static 'resource/css/fa/font-awesome.css' %}"/>
     <link type="text/css" rel="stylesheet" href="{% static 'resource/css/components.css' %}"/>
     <link type="text/css" rel="stylesheet" href="{% static 'resource/css/layout.css' %}"/>
 
@@ -23,14 +22,11 @@
 <div class="landing-wrapper">
     <div class="landing-header">
         <div class="landing-header-content clearfix">
-            <img id="j_idt7" src="" alt="eKPM_logo"/>
-
+            <a href="{% url 'landing_page' %}"><img id="j_idt7" src="" alt="eKPM_logo"/></a>
             <a id="menu-button" href="#">
                 <span class="fa fa-bars"></span>
             </a>
             <ul id="menu">
-                <li><a href="{% url 'landing_page' %}"><i class="menu-icon fa fa-home"></i>Home</a></li>
-                <li><a href="{% url 'manager:portal' %}"><i class="menu-icon fa fa-home"></i>Portal</a></li>
                 <li><a href="#introduction"><i class="menu-icon fa fa-certificate"></i>Introduction</a></li>
                 <li><a href="#landing-feature"><i class="menu-icon fa fa-sitemap"></i>Features</a></li>
                 <li><a href="#pricing"><i class="menu-icon fa fa-usd"></i>Pricing</a></li>
@@ -42,11 +38,10 @@
         <div class="introduction-content">
             <p class="title">Cuius Incorporated Presents eKPM</p>
             <p class="subtitle">
-                A robust and Scalable Property Management Platform for Property Managers
+                A robust and Scalable Property Management Platform for Enterprise Property Managers
             </p>
-            <button id="j_idt9" name="j_idt9"
-                    class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only" type="button"><span
-                    class="ui-button-text ui-c">Log In</span></button>
+            <a class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only"
+               href="{% url 'login' %}"><span class="ui-button-text ui-c">Log In</span></a>
 
         </div>
     </div>
@@ -155,11 +150,8 @@
 </div>
 
 
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-<script type="text/javascript"
-        src="{% static 'resource/js/jquery/jquery-plugins.js' %}"></script>
+<script type="text/javascript" src="{% static 'resource/js/jquery/jquery.js' %}"></script>
+<script type="text/javascript" src="{% static 'resource/js/jquery/jquery-plugins.js' %}"></script>
 <script type="text/javascript" src="{% static 'resource/js/core.js' %}"></script>
 <script type="text/javascript" src="{% static 'resource/js/components.js' %}"></script>
 
