--- a/templates/index.html
+++ b/templates/index.html
@@ -135,14 +135,15 @@
         </div>
     </div>
 
-    <div class="landing-footer">
+    <div class="landing-footer" style="background-image: url(/static/resource/images/bg/landing_cloud.png);">
         <div class="landing-footer-content">
             <div class="footer-top">
                 <div class="ui-g">
                     <div class="ui-g-12">
                         <img id="j_idt17" src="" alt="eKPM_logo" class="footer-logo"/>
                     </div>
-                    <p>Powered By Cuius Inc.</p>
+                    <p>
+                        Powered By <a href="http://www.cuius.co.zw" target="_blank" style="color: white">Cuius Inc.</a></p>
                 </div>
             </div>
         </div>
