--- a/templates/manager/property_create.html
+++ b/templates/manager/property_create.html
@@ -2,7 +2,7 @@
 {% load staticfiles %}
 {% load crispy_forms_tags %}
 {% block title %}
-    eKPM Portal | Land Lord
+    eKPM Portal | Property
 {% endblock %}
 
 {% block content %}
@@ -10,7 +10,7 @@
     <div class="ui-g ui-fluid">
         <div class="ui-g-12">
             <div class="card card-w-title">
-                <h1>Land Lord</h1>
+                <h1>Property</h1>
                 <div class="ui-g ui-fluid">
                     <div>
                         <form method="POST" class="ui-g-12">
@@ -24,7 +24,7 @@
                                             class="ui-button-text ui-c">SAVE</span></button>
                                     <script id="j_idt180_s"
                                             type="text/javascript">PrimeFaces.cw("CommandButton", "widget_j_idt180", {id: "j_idt180"});</script>
-                                    <a id="j_idt185" href="{% url 'manager:landlords' %}" style="margin-bottom:10px;"
+                                    <a id="j_idt185" href="{% url 'manager:properties' %}" style="margin-bottom:10px;"
                                        class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only indigo-btn">
                                         <span class="ui-button-text ui-c">Cancel</span></a>
                                     <script id="j_idt185_s"
