--- a/templates/login.html
+++ b/templates/login.html
@@ -1,4 +1,5 @@
 {% load staticfiles %}
+{% load crispy_forms_tags %}
 <!DOCTYPE html>
 <!-- @author Terrence Takunda Munyunguma: ttmunyunguma@gmail.com -->
 <html xmlns="http://www.w3.org/1999/xhtml">
@@ -39,19 +40,6 @@
             <div class="login-wrapper">
                 <div class="login-container">
                     <span class="title">Login</span>
-                    {% comment %}<div class="ui-g-12"><input id="j_idt9" name="j_idt9" type="text" autocomplete="off"
-                                                    placeholder="Username"
-                                                    class="ui-inputfield ui-inputtext ui-widget ui-state-default ui-corner-all"/>
-                            <script id="j_idt9_s"
-                                    type="text/javascript">PrimeFaces.cw("InputText", "widget_j_idt9", {id: "j_idt9"});</script>
-                        </div>
-                        <div class="ui-g-12"><input id="j_idt11" name="j_idt11" type="password"
-                                                    class="ui-inputfield ui-password ui-widget ui-state-default ui-corner-all"
-                                                    autocomplete="off" placeholder="Password"/>
-                            <script id="j_idt11_s" type="text/javascript">$(function () {
-                                PrimeFaces.cw("Password", "widget_j_idt11", {id: "j_idt11"});
-                            });</script>
-                        </div>{% endcomment %}
                     <form action="{% url 'login' %}" method="POST" class="ui-g ui-fluid">
                         {% csrf_token %}
                         {{ form.as_p }}
