--- a/templates/manager/landlords_list.html
+++ b/templates/manager/landlords_list.html
@@ -13,6 +13,11 @@
                 <div id="form:j_idt47" class="ui-datatable ui-widget ui-datatable-reflow">
                     <div class="ui-datatable-header ui-widget-header ui-corner-top">
                         Property Owners with properties under your management
+                        <span style="padding-left: 10px">
+                            <a id="j_idt182" href="{% url 'manager:landlords_new' %}"
+                           class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only purple-btn">
+                                <span class="ui-button-text ui-c">Add New</span></a>
+                        </span>
                     </div>
                     <div id="form:j_idt47_paginator_top" class="ui-paginator ui-paginator-top ui-widget-header"
                          role="navigation" aria-label="Pagination">
@@ -72,7 +77,7 @@
                                     <td role="gridcell">{{ landlord.date_created }}</td>
                                     <td role="gridcell">
                                         <a class="btn btn-block"
-                                           href="{% url 'manager:landlord_detail' pk=landlord.id %}">
+                                           href="{{ landlord.get_absolute_url }}">
                                             <span title="View Details" class="fa fa-eye"></span>
                                         </a>
                                     </td>
