--- a/templates/manager/property_create.html
+++ b/templates/manager/property_create.html
@@ -1,6 +1,5 @@
 {% extends 'base.html' %}
 {% load staticfiles %}
-{% load crispy_forms_tags %}
 {% block title %}
     eKPM Portal | Property
 {% endblock %}
@@ -13,23 +12,42 @@
                 <h1>Property</h1>
                 <div class="ui-g ui-fluid">
                     <div>
-                        <form method="POST" class="ui-g-12">
+                        <form method="POST" action="{% url 'manager:properties_new' %}" class="ui-g-12">
                             {% csrf_token %}
-                            {{ form|crispy }}
-                            <div class="ui-g">
+                            {% for errors in form.non_field.errors %}
+                                <p class="text-danger">{{ errors }}</p>
+                            {% endfor %}
+                            {% for field in form %}
                                 <div class="ui-panelgrid-cell ui-g-12 ui-md-12">
-                                    <button id="j_idt180" name="j_idt180"
-                                            class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only purple-btn"
-                                            style="margin-bottom:10px;" type="submit"><span
-                                            class="ui-button-text ui-c">SAVE</span></button>
-                                    <script id="j_idt180_s"
-                                            type="text/javascript">PrimeFaces.cw("CommandButton", "widget_j_idt180", {id: "j_idt180"});</script>
-                                    <a id="j_idt185" href="{% url 'manager:properties' %}" style="margin-bottom:10px;"
-                                       class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only indigo-btn">
-                                        <span class="ui-button-text ui-c">Cancel</span></a>
-                                    <script id="j_idt185_s"
-                                            type="text/javascript">PrimeFaces.cw("CommandButton", "widget_j_idt185", {id: "j_idt185"});</script>
+                                    <label class="ui-outputlabel ui-widget"
+                                           for="{{ field.id_for_label }}">{{ field.name|upper }}:</label>
                                 </div>
+                                <div class="ui-panelgrid-cell ui-g-12 ui-md-12">
+                                    {{ field }}
+                                    <script type="text/javascript">
+                                        PrimeFaces.cw("InputText", "widget_{{ field.id_for_label }}", {id: "{{ field.id_for_label }}"});
+                                    </script>
+                                </div>
+                                {% if field.help_text %}
+                                    <p class="text-success">{{ field.help_text }}</p>
+                                {% endif %}
+
+                                {% for error in field.errors %}
+                                    <p class="text-danger">{{ error }}</p>
+                                {% endfor %}
+                            {% endfor %}
+                            <div class="ui-panelgrid-cell ui-g-12 ui-md-12">
+                                <button id="j_idt180" name="j_idt180"
+                                        class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only purple-btn"
+                                        style="margin-bottom:10px;" type="submit"><span
+                                        class="ui-button-text ui-c">SAVE</span></button>
+                                <script id="j_idt180_s"
+                                        type="text/javascript">PrimeFaces.cw("CommandButton", "widget_j_idt180", {id: "j_idt180"});</script>
+                                <a id="j_idt185" href="{% url 'manager:properties' %}" style="margin-bottom:10px;"
+                                   class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only indigo-btn">
+                                    <span class="ui-button-text ui-c">Cancel</span></a>
+                                <script id="j_idt185_s"
+                                        type="text/javascript">PrimeFaces.cw("CommandButton", "widget_j_idt185", {id: "j_idt185"});</script>
                             </div>
                         </form>
                     </div>
