--- a/templates/manager/property_unit_list.html
+++ b/templates/manager/property_unit_list.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load staticfiles %}
 {% block title %}
-    eKPM Portal | Properties
+    eKPM Portal | Property Units
 {% endblock %}
 
 {% block content %}
@@ -9,12 +9,12 @@
     <div class="ui-g">
         <div class="ui-g-12">
             <div class="card no-margin">
-                <h1>Properties</h1>
+                <h1>Property Units for: {{ property.title }}</h1>
                 <div id="form:j_idt47" class="ui-datatable ui-widget ui-datatable-reflow">
                     <div class="ui-datatable-header ui-widget-header ui-corner-top">
-                        Properties under your management
+                         Your Property Units
                         <span style="padding-left: 10px">
-                            <a id="j_idt182" href="{% url 'manager:properties_new' %}"
+                            <a id="j_idt182" href="{% url 'manager:property_units_new' prop=prop %}"
                            class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only purple-btn">
                                 <span class="ui-button-text ui-c">Add New</span></a>
                         </span>
@@ -46,17 +46,17 @@
                             <tr role="row">
                                 <th id="form:j_idt47:j_idt49" class="ui-state-default ui-sortable-column"
                                     role="columnheader" aria-label="Id" scope="col">
-                                    <span class="ui-column-title">Title</span>
+                                    <span class="ui-column-title">Property</span>
                                     <span class="ui-sortable-column-icon ui-icon ui-icon-carat-2-n-s"></span>
                                 </th>
                                 <th id="form:j_idt47:j_idt51" class="ui-state-default ui-sortable-column"
                                     role="columnheader" aria-label="Year" scope="col">
-                                    <span class="ui-column-title">Type</span>
+                                    <span class="ui-column-title">Unit Name</span>
                                     <span class="ui-sortable-column-icon ui-icon ui-icon-carat-2-n-s"></span>
                                 </th>
                                 <th id="form:j_idt47:j_idt53" class="ui-state-default ui-sortable-column"
                                     role="columnheader" aria-label="Brand" scope="col">
-                                    <span class="ui-column-title">City</span>
+                                    <span class="ui-column-title">Is Vacant?</span>
                                     <span class="ui-sortable-column-icon ui-icon ui-icon-carat-2-n-s"></span>
                                 </th>
                                 <th id="form:j_idt47:j_idt55" class="ui-state-default ui-sortable-column"
@@ -67,22 +67,26 @@
                             </thead>
 
                             <tbody id="form:j_idt47_data" class="ui-datatable-data ui-widget-content" tabindex="0">
-                            {% for property in properties %}
+                            {% for unit in units %}
 
                                 <tr class="ui-widget-content ui-datatable-odd ui-datatable-selectable ui-datatable-scrollable"
                                     role="row" onclick=""
                                     aria-selected="false">
-                                    <td role="gridcell">{{ property.title }}</td>
-                                    <td role="gridcell">{{ property.property_type }}</td>
-                                    <td role="gridcell">{{ property.city }}</td>
+                                    <td role="gridcell">{{ unit.property }}</td>
+                                    <td role="gridcell">{{ unit.unit_name }}</td>
+                                    <td role="gridcell">{{ unit.is_vacant }}</td>
                                     <td role="gridcell">
+                                        {% comment %}<a class="btn btn-block"
+                                           href="{% url 'manager:property_units_detail' pk=unit.id prop=prop %}">
+                                            <span title="View Details" class="fa fa-eye"></span>
+                                        </a>{% endcomment %}
                                         <a class="btn btn-block"
-                                           href="{{ property.get_absolute_url }}">
+                                           href="{{ unit.get_absolute_url }}">
                                             <span title="View Details" class="fa fa-eye"></span>
                                         </a>
                                     </td>
                                 </tr>
-                                <input type="hidden" id="Url" data-url="{% url 'manager:property_detail' pk=property.id %}"/>
+                                <input type="hidden" id="Url" data-url="#"/>
                             {% endfor %}
                             </tbody>
                         </table>
