Premises model Up

--- a/templates/base.html
+++ b/templates/base.html
@@ -407,10 +407,10 @@
     <div class="layout-footer">
         <div class="clearfix">
             <span class="footer-text-left">
-                Powered by <a href="http://www.cuius.co.zw" target="_blank">Cuius Inc.</a></span>
+                <strong>eKPM</strong> | Powered by <a href="http://www.cuius.co.zw" target="_blank">Cuius Inc.</a></span>
             <span class="footer-text-right">
                 Copyright &copy;  <script>document.write(new Date().getFullYear().toString())</script>
-                All Rights Reserved</span>
+                v 0.0.1-SNAPSHOT | All Rights Reserved</span>
         </div>
     </div>
 
