--- a/templates/manager/property_detail.html
+++ b/templates/manager/property_detail.html
@@ -1,6 +1,5 @@
 {% extends 'base.html' %}
 {% load staticfiles %}
-{% load crispy_forms_tags %}
 {% block title %}
     eKPM Portal | Property
 {% endblock %}
@@ -155,8 +154,16 @@
                         <td role="gridcell" class="ui-panelgrid-cell">Rentable Units:</td>
                         <td role="gridcell" class="ui-panelgrid-cell">
                             <a id="j_idt182" href="{% url 'manager:property_units' prop=property.pk %}"
-                           class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only cyan-btn">
+                           class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only purple-btn">
                                 <span class="ui-button-text ui-c">View Available Units</span></a>
+                        </td>
+                    </tr>
+                    <tr class="ui-widget-content" role="row" style="border: 1px solid #3e4da1;">
+                        <td role="gridcell" class="ui-panelgrid-cell">Premises:</td>
+                        <td role="gridcell" class="ui-panelgrid-cell">
+                            <a id="j_idt182" href="{% url 'manager:property_premises' prop=property.pk %}"
+                           class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only purple-btn">
+                                <span class="ui-button-text ui-c">View Property Premises</span></a>
                         </td>
                     </tr>
                     </tbody>
