Tenant and Lease models

--- a/templates/manager/property_detail.html
+++ b/templates/manager/property_detail.html
@@ -166,6 +166,14 @@
                                 <span class="ui-button-text ui-c">View Property Premises</span></a>
                         </td>
                     </tr>
+                    <tr class="ui-widget-content" role="row" style="border: 1px solid #3e4da1;">
+                        <td role="gridcell" class="ui-panelgrid-cell">Tenants:</td>
+                        <td role="gridcell" class="ui-panelgrid-cell">
+                            <a id="j_idt182" href="{% url 'manager:property_tenants' prop=property.pk %}"
+                           class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only purple-btn">
+                                <span class="ui-button-text ui-c">View Tenants on Property</span></a>
+                        </td>
+                    </tr>
                     </tbody>
                 </table>
                 <div class="ui-g">
